--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -32,7 +32,7 @@ collections: # A list of collections the CMS should be able to edit
               {label: "Heading", name: "heading", widget: string},
               {label: "Text", name: "text", widget: "text"}]}
           - {label: "Benefits", name: benefits, widget: list, fields: [
-              {label: "Title", name: "text", widget: "text"},
+              {label: "Title", name: "title", widget: "text"},
               {label: "Text", name: "text", widget: "text"}]}
           - {label: "Values", name: "values", widget: "object", fields: [
               {label: "Heading", name: "heading", widget: string},
