--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -34,6 +34,8 @@ collections: # A list of collections the CMS should be able to edit
           - {label: "Benefits", name: benefits, widget: list, fields: [
               {label: "Title", name: "title", widget: "text"},
               {label: "Text", name: "text", widget: "text"}]}
+          - { label: "Quotes", name: quotes, widget: list, fields: [
+            { label: "Title", name: "title", widget: "text" } ] }
           - {label: "Values", name: "values", widget: "object", fields: [
               {label: "Heading", name: "heading", widget: string},
               {label: "Text", name: "text", widget: "text"}]}
